Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -569,7 +569,8 @@
    ],
    "source": [
     "# code for test set bias and variance\n",
-    "variance(rfr)"
+    "bias(y_train,rfr.predict(X_train))\n",
+    "variance(rfr.predict(X_train))"
    ]
   },
   {
