Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -569,7 +569,7 @@
    ],
    "source": [
     "# code for test set bias and variance\n",
-    "bias(y_train,rfr.predict(X_train))\n",
+    "bias(y_test,rfr.predict(X_test))\n",
     "variance(rfr.predict(X_train))"
    ]
   },
