--- a/index.ipynb
+++ b/index.ipynb
@@ -546,31 +546,30 @@
    ],
    "source": [
     "# code for train set bias and variance\n",
-    "bias(y_train,rfr.predict(X_train))\n",
+    "pribias(y_train,rfr.predict(X_train))\n",
     "variance(rfr.predict(X_train))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'y_hat' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-220-79ba841e43ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# code for test set bias and variance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mvariance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_hat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'y_hat' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "7426776718337678.0"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# code for test set bias and variance\n",
     "bias(y_test,rfr.predict(X_test))\n",
-    "variance(rfr.predict(X_train))"
+    "variance(rfr.predict(X_test))"
    ]
   },
   {
