Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -530,24 +530,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4911706792346723.0"
-      ]
-     },
-     "execution_count": 223,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6344012.754545454\n",
+      "4911706792346723.0\n"
+     ]
     }
    ],
    "source": [
     "# code for train set bias and variance\n",
-    "pribias(y_train,rfr.predict(X_train))\n",
-    "variance(rfr.predict(X_train))"
+    "print(bias(y_train,rfr.predict(X_train)))\n",
+    "print(variance(rfr.predict(X_train)))"
    ]
   },
   {
