Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -550,24 +550,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "7426776718337678.0"
-      ]
-     },
-     "execution_count": 225,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32937982.912499994\n",
+      "7426776718337678.0\n"
+     ]
     }
    ],
    "source": [
     "# code for test set bias and variance\n",
-    "bias(y_test,rfr.predict(X_test))\n",
-    "variance(rfr.predict(X_test))"
+    "print(bias(y_test,rfr.predict(X_test)))\n",
+    "print(variance(rfr.predict(X_test)))"
    ]
   },
   {
