--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
     "# Only keep four predictors and transform the with MinMaxScaler\n",
     "\n",
     "scale = MinMaxScaler()\n",
-    "target = df['domgross'].values\n",
+    "target = scale.fit_transform(df['domgross'].values\n",
     "df = df[[ \"budget\", \"imdbRating\", \"Metascore\", \"imdbVotes\"]]\n",
     "transformed = scale.fit_transform(df)\n",
     "pd_df = pd.DataFrame(transformed, columns = df.columns)\n",
