--- a/index.ipynb
+++ b/index.ipynb
@@ -184,23 +184,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-265-3da2b85519d6>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-265-3da2b85519d6>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    df = df[[ \"budget\", \"imdbRating\", \"Metascore\", \"imdbVotes\"]]\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/utils/validation.py:595: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n",
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/preprocessing/data.py:323: DataConversionWarning: Data with input dtype int64, float64 were all converted to float64 by MinMaxScaler.\n",
+      "  return self.partial_fit(X, y)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>budget</th>\n",
+       "      <th>imdbRating</th>\n",
+       "      <th>Metascore</th>\n",
+       "      <th>imdbVotes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.034169</td>\n",
+       "      <td>0.839506</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.384192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.182956</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.066059</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.252847</td>\n",
+       "      <td>0.827160</td>\n",
+       "      <td>0.572917</td>\n",
+       "      <td>0.323196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.157175</td>\n",
+       "      <td>0.925926</td>\n",
+       "      <td>0.645833</td>\n",
+       "      <td>0.137984</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     budget  imdbRating  Metascore  imdbVotes\n",
+       "0  0.034169    0.839506   0.500000   0.384192\n",
+       "1  0.182956    0.000000   0.000000   0.000000\n",
+       "2  0.066059    1.000000   1.000000   1.000000\n",
+       "3  0.252847    0.827160   0.572917   0.323196\n",
+       "4  0.157175    0.925926   0.645833   0.137984"
+      ]
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Only keep four predictors and transform the with MinMaxScaler\n",
     "\n",
     "scale = MinMaxScaler()\n",
-    "target = scale.fit_transform(df[['domgross']].values\n",
+    "target = scale.fit_transform(df[['domgross']].values)\n",
     "df = df[[ \"budget\", \"imdbRating\", \"Metascore\", \"imdbVotes\"]]\n",
     "transformed = scale.fit_transform(df)\n",
     "pd_df = pd.DataFrame(transformed, columns = df.columns)\n",
@@ -216,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -251,16 +333,18 @@
      "output_type": "stream",
      "text": [
       "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
-      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n",
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:3: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-1.3472589371130477"
+       "-0.08649891100884344"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,18 +358,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "360748651.0\n",
-      "[393050114 119640264 107518682 107136417  25213103  93050117 368065385\n",
-      "  13414714 122523060  38362475  37304874  61737191  18007317 148430908\n",
-      "  25682380  75612460  67349198  95020213  54239856  57012977  46000903\n",
-      "  19452138]\n"
+      "0.07863605069664455\n",
+      "[[0.07503123]\n",
+      " [1.        ]\n",
+      " [0.05532489]\n",
+      " [0.08793137]\n",
+      " [0.07997047]\n",
+      " [0.18371859]\n",
+      " [0.228559  ]\n",
+      " [0.16246986]\n",
+      " [0.2647815 ]\n",
+      " [0.02868842]\n",
+      " [0.60304149]\n",
+      " [0.05411816]\n",
+      " [0.03558869]\n",
+      " [0.26576448]\n",
+      " [0.29693477]\n",
+      " [0.12584656]\n",
+      " [0.        ]\n",
+      " [0.02377895]\n",
+      " [0.03930401]\n",
+      " [0.23362505]\n",
+      " [0.13589058]\n",
+      " [0.08521178]]\n"
      ]
     }
    ],
