Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -624,12 +624,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import PolynomialFeatures\n",
-    "# your code here"
+    "poly = PolynomialFeatures(3)\n",
+    "\n",
+    "X_train_poly = poly.fit_transform(X_train)\n",
+    "X_test_poly = poly.fit_transform(X_test)\n"
    ]
   },
   {
