Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -632,7 +632,10 @@
     "poly = PolynomialFeatures(3)\n",
     "\n",
     "X_train_poly = poly.fit_transform(X_train)\n",
-    "X_test_poly = poly.fit_transform(X_test)\n"
+    "X_test_poly = poly.fit_transform(X_test)\n",
+    "\n",
+    "rfr = RandomForestRegressor(n_estimators=100,max_depth=2).fit(X_train_poly,y_train)\n",
+    "rfr.score(X_test,y_test)"
    ]
   },
   {
