--- a/index.ipynb
+++ b/index.ipynb
@@ -635,7 +635,7 @@
     "X_test_poly = poly.fit_transform(X_test)\n",
     "\n",
     "rfr = RandomForestRegressor(n_estimators=100,max_depth=2).fit(X_train_poly,y_train)\n",
-    "rfr.score(X_test,y_test)"
+    "rfr.score(X_test_poly,y_test)"
    ]
   },
   {
