Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -624,9 +624,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 296,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:7: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  import sys\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.011272367144278705"
+      ]
+     },
+     "execution_count": 296,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "poly = PolynomialFeatures(3)\n",
