Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -624,26 +624,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:7: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  import sys\n"
+     "ename": "NameError",
+     "evalue": "name 'LinearRegressor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-304-8167b26e6038>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mX_test_poly\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpoly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mrfr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLinearRegressor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_poly\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mrfr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test_poly\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'LinearRegressor' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.036760464841225526"
-      ]
-     },
-     "execution_count": 302,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -653,7 +646,7 @@
     "X_train_poly = poly.fit_transform(X_train)\n",
     "X_test_poly = poly.fit_transform(X_test)\n",
     "\n",
-    "rfr = RandomForestRegressor(n_estimators=100,max_depth=10).fit(X_train_poly,y_train)\n",
+    "rfr = LinearRegressor.fit(X_train_poly,y_train)\n",
     "rfr.score(X_test_poly,y_test)"
    ]
   },
