Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -712,7 +712,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(bias(y_train,rfr.predict(X_train)))\n",
+    "print(variance(rfr.predict(X_train)))"
    ]
   },
   {
