Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -708,13 +708,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 308,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0182719132319253e-15\n",
+      "0.047554871576562296\n"
+     ]
+    }
+   ],
    "source": [
     "# your code here\n",
-    "print(bias(y_train,rfr.predict(X_train)))\n",
-    "print(variance(rfr.predict(X_train)))"
+    "print(bias(y_train,rfr.predict(X_train_poly)))\n",
+    "print(variance(rfr.predict(X_train_poly)))"
    ]
   },
   {
