--- a/index.ipynb
+++ b/index.ipynb
@@ -778,11 +778,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 311,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7568052807633715\n",
+      "2.9971282994843658\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(bias(y_test,rfr.predict(X_test_poly)))\n",
+    "print(variance(rfr.predict(X_test_poly)))"
    ]
   },
   {
