Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -624,15 +624,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
-      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n",
       "/opt/conda/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:7: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  import sys\n"
      ]
@@ -640,10 +638,10 @@
     {
      "data": {
       "text/plain": [
-       "0.0037876679487981457"
+       "-0.036096320387477565"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 359,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +653,7 @@
     "X_train_poly = poly.fit_transform(X_train)\n",
     "X_test_poly = poly.fit_transform(X_test)\n",
     "\n",
-    "rfr = RandomForestRegressor(n_est).fit(X_train_poly,y_train)\n",
+    "rfr = RandomForestRegressor(n_estimators=100,max_depth=2).fit(X_train_poly,y_train)\n",
     "rfr.score(X_test_poly,y_test)"
    ]
   },
